<resources>
    <string name="app_name">66boss</string>
    <string name="loading">数据加载中， 请稍候&#8230;</string>
    <string name="compose">正在合成</string>
    <string name="check_fail">很抱歉！您的代理申请未通过审核，
        您可以修改资料重新申请代理</string>
    <string name="check_sucess">恭喜你！您的代理申请通过了审核，
        您可以开始代理啦</string>
    <!--QQ,微信开放平台-->
    <!--<string name="weixin_app_id2">wxac34006c18243289</string>-->
    <!--<string name="weixin_app_id">wxcd7d86f3f2c04077</string>-->
    <!--<string name="weixin_app_secret">dd51e4ff815cfe313551a86a6402e886</string>-->
    <!--<string name="qq_app_id">1106188643</string>-->
    <!--<string name="qq_app_key">dlAfz2grvlmECfgT</string>-->
    <string name="alipay_app_id">2016092201948966</string>
    <string name="weixin_app_id">wxac34006c18243289</string>
    <string name="weixin_app_secret">d75af34b167ca5b4debb88009aa9d12c</string>
    <string name="save_photo">保存图片</string>
    <string name="qq_app_id">1105592272</string>
    <string name="qq_app_key">oZVFYZysIJFJhXx4</string>
    <string name="umeng_key">595af6c307fe652140000242</string>
    <!-- 错误提示 start -->
    <string name="error_generic_error">网络连接出现错误！</string>
    <string name="error_generic_server_down">连接不上服务器，请重试！</string>
    <string name="parse_json_erro">服务器数据异常!</string>
    <string name="error_no_internet">没有连接到网络</string>
    <string name="error_server_down">服务器异常，请稍候再试...</string>
    <string name="other_login">使用其他方式登录</string>

    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="main_setting">个人设置</string>
    <string name="main_production">我的作品</string>
    <string name="main_video">上传视频</string>
    <string name="main_price">售货架</string>
    <string name="main_shopping_cart">购物车</string>
    <string name="main_order">订单管理</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="upload_goods">上传商品</string>
    <string name="goods_attr_name">属性名称</string>
    <string name="goods_attr_name_example">例如：颜色</string>
    <string name="goods_attr_class">属性分类</string>
    <string name="goods_attr_class_example">一个属性上传一个分类</string>
    <string name="add_goods_attr">添加属性</string>
    <string name="add_goods_pic">添加图片</string>
    <string name="goods_repertory">库存</string>
    <string name="input_goods_price">填写商品单价</string>
    <string name="goods_price">价格  ￥</string>
    <string name="take_photos">拍照</string>
    <string name="from_the_mobile_phone_photo_album_choice">从手机相册选择</string>
    <string name="my_order">我的订单</string>
    <string name="order_evaluate">评价</string>
    <string name="order_evaluate_publish">发布</string>
    <string name="order_evaluate_tip">说说您使用后的效果感受，相信能帮助更多小伙伴。</string>

    <!-- 相册多选 -->
    <string name="mis_folder_all">所有图片</string>
    <string name="mis_preview">预览</string>
    <string name="mis_msg_no_camera">没有找到系统的相机</string>
    <string name="mis_msg_amount_limit">所选图片超过了数量限制</string>
    <string name="mis_action_done">完成</string>
    <string name="mis_action_button_string">%1$s(%2$d/%3$d)</string>
    <string name="mis_photo_unit">Shot</string>
    <string name="mis_tip_take_photo">拍照</string>
    <string name="mis_error_image_not_exist">Image error</string>
    <string name="mis_error_no_permission">没有权限</string>
    <string name="mis_permission_dialog_title">权限被拒绝</string>
    <string name="mis_permission_dialog_ok">OK</string>
    <string name="mis_permission_dialog_cancel">取消</string>
    <string name="mis_permission_rationale">存储器读权限需要选择文件.</string>
    <string name="mis_permission_rationale_write_storage">存储写入权限需要保存图像.</string>
    <string name="giving_camera_permissions">没有相机权限！</string>
    <string name="giving_record_permissions">没有录音权限！</string>

    <string name="upload_file_success">上传成功</string>
    <string name="upload_file_fail">上传失败</string>
    <string name="upload_file">文件上传中...</string>
    <string name="compose_file">文件合成中...</string>
    <string name="richscan_add_my_to_friend">扫一扫二维码，关注我吧~</string>
    <string name="no_datas">暂未获取到任何数据</string>

    <string name="share_weixin">微信</string>
    <string name="share_weixin_circle">朋友圈</string>
    <string name="share_weibo">微博</string>
    <string name="share_qq">QQ</string>
    <string name="share_qzone">QQ空间</string>

    <string name="notice_weixin_not_install">你未安装微信！</string>
    <string name="notice_qq_not_install">你未安装QQ！</string>
    <string name="msg_clipping_image">正在裁剪图片</string>
    <string name="action_clip">裁剪</string>
    <string name="live_share_content">我正在观看老板六六的视频,一起来围观吧!</string>
    <string name="app_share_content">66boss每天给你新的惊喜，你也一起来玩吧~</string>
    <string name="app_share_title">66boss是一款内容电商平台~</string>
    <string name="app_share_target">http://www.66boss.com/app/download.html</string>

    <string name="about">66boss以重内容轻电商的app平台，专门为企业和个人提高商品运营速率，销售和推广提供方案，是记录商品内容的好工具！</string>
    <string name="msg_camera_invalid_permission_denied">无法打开相机，可能是权限被拒绝</string>
    <string name="msg_camera_invalid_initial_failed">相机初始化失败，无法打开相机</string>
    <string name="msg_camera_invalid_unknown_error">无法打开相机，未知错误</string>
    <string name="msg_could_not_save_photo">无法保存图片</string>
    <string name="success_save">已成功保存到本地</string>
    <string name="no_name_tip">名字不能为空，请填写</string>
    <string name="not_filled">未填写</string>

    <string name="opera_confirm">确定</string>
    <string name="opera_quit">退出</string>

    <string name="Id_card">/^[1-9]\d{7}((0\d)|(1[0-2]))(([0|1|2]\d)|3[0-1])\d{3}$|^[1-9]\d{5}[1-9]\d{3}((0\d)|(1[0-2]))(([0|1|2]\d)|3[0-1])\d{3}([0-9]|X)$/</string>
    <string name="phone">^[1]([3][0-9]{1}|59|58|88|89)[0-9]{8}$</string>
    <string name="num">/^\d{6}(18|19|20)?\d{2}(0[1-9]|1[012])(0[1-9]|[12]\d|3[01])\d{3}(\d|[xX])$/</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
