<?xml version="1.0" encoding="utf-8"?>
<com.boss66.meetbusiness.widget.SwipeMenuView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:padding="9dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods_attr_name"
                android:textColor="@color/text_color_gray_9" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@null"
                android:hint="@string/goods_attr_name_example"
                android:imeOptions="actionNext"
                android:paddingBottom="@dimen/dp_18"
                android:paddingRight="@dimen/dp_6"
                android:paddingTop="@dimen/dp_18"
                android:textColor="@color/text_color_black"
                android:textCursorDrawable="@drawable/shape_edittext_cursor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods_attr_class"
                android:textColor="@color/text_color_gray_9" />

            <EditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@null"
                android:hint="@string/goods_attr_class_example"
                android:imeOptions="actionNext"
                android:paddingBottom="@dimen/dp_18"
                android:paddingRight="@dimen/dp_6"
                android:paddingTop="@dimen/dp_18"
                android:textColor="@color/text_color_black"
                android:textCursorDrawable="@drawable/shape_edittext_cursor" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:paddingLeft="@dimen/dp_18"
        android:paddingRight="@dimen/dp_18"
        android:src="@drawable/delete_goods" />

</com.boss66.meetbusiness.widget.SwipeMenuView>