<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <com.boss66.meetbusiness.widget.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@drawable/person" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="时代发生地方"
            android:textColor="@color/text_color_black"
            android:textSize="16.5sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_top"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="64dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_active"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="13.5dp"
            android:drawableTop="@drawable/sel_main_active"
            android:gravity="center_horizontal"
            android:text="好友动态" />

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="13.5dp"
            android:drawableTop="@drawable/sel_main_msg"
            android:gravity="center_horizontal"
            android:text="消息" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="13.5dp"
            android:drawableTop="@drawable/sel_main_private"
            android:gravity="center_horizontal"
            android:text="私信" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/bottom_navigation_rg"
        android:layout_width="160dp"
        android:layout_height="320dp"
        android:layout_below="@+id/ll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:weightSum="5">

        <RadioButton
            android:id="@+id/rb_setting"
            style="@style/MenuBtn"
            android:checked="true"
            android:drawableLeft="@drawable/sel_main_setting"
            android:text="@string/main_setting" />

        <RadioButton
            android:id="@+id/rb_production"
            style="@style/MenuBtn"
            android:drawableLeft="@drawable/sel_main_production"
            android:text="@string/main_production" />

        <RadioButton
            android:id="@+id/rb_video"
            style="@style/MenuBtn"
            android:drawableLeft="@drawable/sel_main_video"
            android:text="@string/main_video" />

        <RadioButton
            android:id="@+id/rb_price"
            style="@style/MenuBtn"
            android:drawableLeft="@drawable/sel_main_price"
            android:text="@string/main_price" />

        <RadioButton
            android:id="@+id/rb_shopping"
            style="@style/MenuBtn"
            android:drawableLeft="@drawable/sel_main_shopping"
            android:text="@string/main_shopping_cart" />
    </RadioGroup>

</RelativeLayout>