<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp_10"
    android:paddingBottom="@dimen/dp_14">

    <TextView
        android:id="@+id/tv_add_attr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:drawableLeft="@drawable/add_attributes"
        android:text="@string/add_goods_attr"
        android:textColor="@color/text_color_gray_9" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color_gray_d2" />

    <HorizontalScrollView
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginTop="9dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/ll_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

        </LinearLayout>
    </HorizontalScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color_gray_d2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/goods_repertory"
            android:textColor="@color/text_color_gray_9" />

        <ImageView
            android:id="@+id/iv_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/minus" />

        <EditText
            android:id="@+id/et_repertory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="9"
            android:paddingBottom="@dimen/dp_14"
            android:paddingLeft="@dimen/dp_22"
            android:paddingRight="@dimen/dp_22"
            android:paddingTop="@dimen/dp_14"
            android:singleLine="true"
            android:text="0"
            android:textColor="@color/text_color_black"
            android:textCursorDrawable="@drawable/shape_edittext_cursor" />

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color_gray_d2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goods_price"
            android:textColor="@color/text_color_gray_9" />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:background="@null"
            android:hint="@string/input_goods_price"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:paddingBottom="@dimen/dp_18"
            android:paddingRight="@dimen/dp_6"
            android:paddingTop="@dimen/dp_18"
            android:singleLine="true"
            android:textColor="@color/text_color_black"
            android:textColorHint="@color/text_color_gray_c"
            android:textCursorDrawable="@drawable/shape_edittext_cursor" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color_gray_d2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="提交"
        android:visibility="invisible" />
</LinearLayout>