<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:lxhRatingBar="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:paddingBottom="9dp"
            android:paddingRight="@dimen/dp_10"
            android:paddingTop="9dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_return" />

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/order_evaluate"
                android:textColor="@color/text_color_black"
                android:textSize="21sp" />

            <Button
                android:id="@+id/bt_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:background="@drawable/shape_btn_round_commit"
                android:text="@string/order_evaluate_publish" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_10"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/person" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/order_evaluate"
                android:textColor="@color/text_color_black"
                android:textSize="18sp" />

            <com.boss66.meetbusiness.widget.MyStarView
                android:id="@+id/starBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                lxhRatingBar:canEdit="true"
                lxhRatingBar:differentSize="false"
                lxhRatingBar:dividerWidth="@dimen/x20"
                lxhRatingBar:starCount="5"
                lxhRatingBar:stateResId="@drawable/selector_comment_ratingbar"
                lxhRatingBar:widthAndHeight="@dimen/x90" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/dp_18"
            android:background="@color/umeng_socialize_divider"
            android:gravity="left"
            android:hint="@string/order_evaluate_tip"
            android:padding="@dimen/dp_10"
            android:textColor="@color/text_color_black"
            android:textColorHint="@color/text_color_gray_6"
            android:textCursorDrawable="@null" />

        <LinearLayout
            android:id="@+id/ll_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_14"
            android:gravity="center_vertical"
            android:orientation="horizontal">

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/text_color_gray_a" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>